--- a/DevHobby.CourseFlow.Application/DevHobby.CourseFlow.Application.csproj
+++ b/DevHobby.CourseFlow.Application/DevHobby.CourseFlow.Application.csproj
@@ -15,4 +15,8 @@
 	  <ProjectReference Include="..\DevHobby.CourseFlow.Domain\DevHobby.CourseFlow.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Features\Courses\Commands\CreateCourse\" />
+	</ItemGroup>
+
 </Project>
