--- a/DevHobby.CourseFlow.Application/DevHobby.CourseFlow.Application.csproj
+++ b/DevHobby.CourseFlow.Application/DevHobby.CourseFlow.Application.csproj
@@ -16,7 +16,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Features\Categories\Commands\" />
+	  <Folder Include="Features\Categories\Queries\" />
 	  <Folder Include="Features\Courses\Commands\CreateCourse\" />
+	  <Folder Include="Features\Orders\Commands\" />
+	  <Folder Include="Features\Orders\Queries\" />
 	</ItemGroup>
 
 </Project>
