--- a/DevHobby.CourseFlow.Api/DevHobby.CourseFlow.Api.csproj
+++ b/DevHobby.CourseFlow.Api/DevHobby.CourseFlow.Api.csproj
@@ -16,4 +16,11 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
