--- a/DevHobby.CourseFlow.Infrastructure/DevHobby.CourseFlow.Infrastructure.csproj
+++ b/DevHobby.CourseFlow.Infrastructure/DevHobby.CourseFlow.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="12.2.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
