--- a/DevHobby.CourseFlow.Api/DevHobby.CourseFlow.Api.csproj
+++ b/DevHobby.CourseFlow.Api/DevHobby.CourseFlow.Api.csproj
@@ -18,6 +18,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
 	<PackageReference Include="MediatR" Version="12.4.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
+	<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
